--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-REACT_APP_BACKEND_URL=http://0.0.0.0:8001
+REACT_APP_BACKEND_URL=https://f76bbcee-2f06-47e5-b40d-b20a8057d19a.preview.emergentagent.com
 WDS_SOCKET_PORT=443
